rycl_derive/tests/macro_tests/invalid_kernel_struct_test.stderr
error: Field `d` in struct `Test` is not a primitive type.
 --> tests/macro_tests/invalid_kernel_struct_test.rs:4:12
  |
4 | pub struct Test {
  |            ^^^^
